samples/_failures_safe/1761518667_9278e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c583167c.c: In function ‘main’:
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected expression at end of input
  146 |                     for (
      |                     ^~~
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c583167c.c:146:21: error: expected declaration or statement at end of input
